<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="center"
              android:orientation="vertical"
              android:background="@drawable/bg_android">
    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:contentDescription="@string/RapidFTRLogo"
               android:padding="3dp" android:src="@drawable/logo"
               android:background="@color/logoBackground"
               android:scaleType="fitCenter">
    </ImageView>

    <EditText android:id="@+id/username"
              android:hint="@string/username"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_margin="5dp"/>

    <EditText android:id="@+id/password"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_margin="5dp"/>


    <EditText android:id="@+id/base_url"
              android:hint="@string/url"
              android:inputType="textUri"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_margin="5dp"/>

    <Button android:id="@+id/login_button"
            android:text="@string/log_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

    <TextView android:id="@+id/change_url"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/change_url"
              android:linksClickable="true"
              android:layout_margin="5dp"
              android:textColor="@color/links"
              android:visibility="gone"
              android:layout_gravity="center_horizontal"/>




</LinearLayout>