<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/bg_android"
                  android:layout_marginTop="0dp">

        <ImageView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/RapidFTRLogo"
                   android:padding="3dp" android:src="@drawable/logo"
                   android:background="@color/logoBackground"
                   android:scaleType="fitCenter">
        </ImageView>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/username"
                  android:hint="@string/username"
                  android:inputType="textFilter|textNoSuggestions|textVisiblePassword"
                  android:autoText="false"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/password"
                  android:hint="@string/password"
                  android:inputType="textPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/confirm_password"
                  android:hint="@string/confirm"
                  android:inputType="textPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/url"
                  android:hint="@string/optional_url"
                  android:inputType="textFilter|textNoSuggestions|textVisiblePassword"
                  android:autoText="false"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/organisation"
                  android:hint="@string/organisation"
                  android:inputType="textFilter|textNoSuggestions|textVisiblePassword"
                  android:autoText="false"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <Button android:background="@drawable/button"
                android:id="@+id/signup_button"
                android:text="@string/signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/button"
                android:onClick="createUser"/>

    </LinearLayout>
</ScrollView>
