<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/bg_android"
                  android:layout_marginTop="0dp">

        <ImageView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/RapidFTRLogo"
                   android:padding="3dp" android:src="@drawable/logo"
                   android:background="@color/logoBackground"
                   android:scaleType="fitCenter">
        </ImageView>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/username"
                  android:hint="@string/username"
                  android:inputType="textFilter|textNoSuggestions|textVisiblePassword"
                  android:autoText="false"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="rapidftr"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/password"
                  android:hint="@string/password"
                  android:inputType="textPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="rapidftr"/>


        <EditText android:background="@drawable/textbox"
                  android:id="@+id/url"
                  android:hint="@string/url"
                  android:inputType="textFilter|textUri|textVisiblePassword|textNoSuggestions"
                  android:autoText="false"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <Button android:background="@drawable/button"
                android:id="@+id/login_button"
                android:text="@string/log_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/button"/>

        <TextView android:id="@+id/change_url"
                  android:text="@string/change_url"
                  android:linksClickable="true"
                  style="@style/links"
                  android:textColor="@color/links"
                  android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
