<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/bg_android"
                  android:layout_marginTop="0dp">

        <ImageView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/RapidFTRLogo"
                   android:padding="3dp" android:src="@drawable/logo"
                   android:background="@color/logoBackground"
                   android:scaleType="fitCenter">
        </ImageView>


        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/current_password_label"
                  android:layout_margin="5dp"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/current_password"
                  android:hint="@string/current_password_label"
                  android:inputType="textPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/new_password"
                  android:layout_margin="5dp"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/new_password"
                  android:hint="@string/new_password"
                  android:inputType="textPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/confirm_label"
                  android:layout_margin="5dp"/>

        <EditText android:background="@drawable/textbox"
                  android:id="@+id/new_password_confirm"
                  android:hint="@string/confirm"
                  android:inputType="textPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"/>

        <Button android:background="@drawable/button"
                android:id="@+id/change_button"
                android:text="@string/change_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/button"
                android:onClick="changePassword"/>

    </LinearLayout>
</ScrollView>
