<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:orientation="vertical"
              android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
                  android:id="@+id/nav_bar"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <include layout="@layout/search_tab"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/search_bar"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:weightSum="5"
                  android:layout_height="wrap_content"
                   android:padding="5dp"
                android:background="#999999">
        <EditText
                android:id="@+id/search_text"
                android:hint="@string/search_child"
                android:layout_weight="4"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox"
                style="@style/TextView">
        </EditText>
        <Button android:id="@+id/search_btn"
                android:text="@string/go"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@drawable/button">
        </Button>

    </LinearLayout>

    <ListView
            android:id="@+id/child_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    </ListView>

    <LinearLayout android:id="@+id/no_child_view"
                  android:layout_weight="4"
                  android:layout_width="fill_parent"
                  android:layout_height="0dip"
                  style="@style/no_child_text"
                  android:gravity="center_horizontal"
                  android:visibility="gone">

        <TextView android:text="@string/child_not_found"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
</LinearLayout>