<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:background="#333333"
              android:orientation="vertical"
              android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:background="#333333"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">

        <Button
                android:text="@string/register_tab_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/tab_sel"
                android:drawableLeft="@drawable/icon_register_sel"
                android:background="@drawable/tab_active"
                android:onClick="registerTabListener"
                />
        <View android:background="#333333"
              android:layout_height="30dp"
              android:layout_width="1dp"/>
        <Button
                android:text="@string/view_all_tab_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/tab"
                android:layout_weight="1"
                android:background="@drawable/tab"
                android:drawableLeft="@drawable/icon_viewall"
                android:onClick="viewAllChildrenListener"
                />
        <View android:background="#333333"
              android:layout_height="30dp"
              android:layout_width="1dp"/>
        <Button
                android:id="@+id/search_tab"
                android:text="@string/search_tab_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/tab"
                android:layout_weight="1"
                android:background="@drawable/tab"
                android:drawableLeft="@drawable/icon_search"
                android:onClick="searchTabListener"
                />
    </LinearLayout>

    <View android:background="@color/tab_partition"
          android:layout_height="5dp"
          android:layout_width="fill_parent"/>
</LinearLayout>